--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "json-server --watch ./db.json",
-    "start-auth": "node server.js"
+    "start": "node server.js"
   },
   "author": "Irina",
   "license": "ISC",
